# py-helloworld

./: .gitignore  LICENSE  README.md  pyproject.toml
src/helloworld/: __init__.py  __main__.py  cli.py  hello.py
tests/: test_hello.py
