[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "helloworld.__version__"}

[project]
name = "helloworld"
dynamic = ["version"]
description = 'Example minimal project'
readme = "README.md"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
keywords = []
authors = [
  { name = "John Doe", email = "johndoe@example.org" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
hello = "helloworld.cli:main"

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
source_pkgs = ["helloworld"]
branch = true
parallel = true
omit = [
  "src/helloworld/__main__.py",
  "src/helloworld/cli.py",
]

[tool.coverage.paths]
helloworld = ["src/helloworld"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
