[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "helloworld.__version__"}

[project]
name = "helloworld"
dynamic = ["version"]
description = 'Example minimal project'
readme = "README.md"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
keywords = []
authors = [
  { name = "John Doe", email = "johndoe@example.org" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = []

[project.optional-dependencies]
test = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
]

[project.scripts]
hello = "helloworld.cli:main"

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
source_pkgs = ["helloworld"]
branch = true
parallel = true
omit = [
  "src/helloworld/__main__.py",
  "src/helloworld/cli.py",
]

[tool.coverage.paths]
helloworld = ["src/helloworld"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
src_paths = [
  "src/helloworld",
  "test",
]

[tool.mypy]
python_version = 3.8
strict = true

[tool.tox]
legacy_tox_ini = """
  [tox]
  env_list =
    py38
    py310
    linters
    types

  [testenv]
  deps =
    pytest
    pytest-cov
  commands =
    pytest

  [testenv:linters]
  deps =
    black
    isort
  commands =
    black --check --diff src/
    isort . --check --diff

  [testenv:types]
  deps =
    mypy
  commands =
    mypy src/
"""
